--- a/src/contactos/Contacto/Contacto.form
+++ b/src/contactos/Contacto/Contacto.form
@@ -201,6 +201,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="num_celular">
       <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="num_celularActionPerformed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="num_celularKeyTyped"/>
       </Events>
       <Constraints>
